Updated index.html and style.css

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
     <!-- Custom Css -->
 
-    <link rel="stylesheet" href="./assets/furniture.css">
+    <link rel="stylesheet" href="./assets/style.css">
 
 </head>
 
@@ -208,7 +208,7 @@
 
     <!-- Custom Javascript Links -->
 
-    <script src="./assets/furniture.js"></script>
+    <script src="./assets/main.js"></script>
 
 </body>
 
