--- a/index.html
+++ b/index.html
@@ -1,215 +1,339 @@
 <!DOCTYPE html>
-
 <html lang="en">
-
 <head>
-
     <meta charset="UTF-8">
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <title>4niture</title>
-
     <!-- Favicon  -->
-
     <link rel="shortcut icon" href="" type="image/x-icon">
-
     <!-- Bootstrap CSS CDN -->
-
     <link
-
       rel="stylesheet"
-
       href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
-
       integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-
       crossorigin="anonymous"
-
     />
-
     <!-- Font Awesome -->
-
     <script src="https://kit.fontawesome.com/0f19ba4771.js" crossorigin="anonymous"></script>
-
     <!-- AOS -->
-
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-
     <script>
-
         AOS.init();
-
     </script>
 
-    <!-- Custom Css -->
-
-    <link rel="stylesheet" href="./assets/style.css">
-
+<!-- Custom Css -->
+    <link rel="stylesheet" href="./assets/furniture.css">
+    <!-- google font -->
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
-
     <!-- Raji -->
 
+
+
+
+
     <!-- Acel -->
-
-    <!-- Sharon -->
-
- <div class="row text-section">
-
-  <div class="container my-3">
-
-   <div class="row">
-
-     <div class="col-md-7 box">
-
-       <h2 class="text-white">Join Our Newsletter</h2>
-
-       <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet tenetur, nihil facilis fugiat aperiam cum debitis beatae consequatur unde repellat.</p>
-
-     </div>
-
-    <div class="col-md-5 box">
-
-      <form class="mt-4">
-
-       <div class="row">
-
-        <div class="col-md-8">
-
-          <div class="form-group">
-
-            <input type="text" name="" class="form-control rounded-0">
-
-          </div>
-
+    <div class="diva1">
+        <div class="diva1sec1">
+            <h2 id="header" class="sec1hh1"><img class="sec1img2" src="./assets/img/text-ellipse.png"> Our Fave Kits</h2>
+            <div class="sec1cont">
+                <div class="sec1div2 sec1divs box-animation">
+                    <div class="sec1div6 sec1divs1 box-animation">
+                    <img class="sec1imgs" src="./assets/img/blue-chair.png" alt="">
+                    <div class="sec1div5">
+                        <h6 class="sec1hh2">Swan Chair</h6>
+                        <h6 class="sec1hh3">$67.99</h6>
+                    </div>  
+                  </div>
+                    <!-- <div class="sec1butt1">
+                        <button class="sec1butt2">Discover</button>
+                    </div> -->
+                </div>
+                <div class="sec1div2 sec1divs box-animation">
+                    <img class="sec1imgs" src="./assets/img/brown-chair.png" alt="">
+                    <div class="sec1div5">
+                        <h6 class="sec1hh2">Swan Chair</h6>
+                        <h6 class="sec1hh3">$67.99</h6>
+                    </div>
+                </div>
+                <div class="sec1div3 sec1divs box-animation">
+                    <img class="sec1imgs" src="./assets/img/coral-chair.png" alt="">
+                    <div class="sec1div5">
+                        <h6 class="sec1hh2">Swan Chair</h6>
+                        <h6 class="sec1hh3">$67.99</h6>
+                    </div>
+                </div>
+                <div class="sec1div4 sec1divs box-animation">
+                    <img class="sec1imgs" src="./assets/img/wine-chair.png" alt="">
+                    <div class="sec1div5">
+                        <h6 class="sec1hh2">Swan Chair</h6>
+                        <h6 class="sec1hh3">$67.99</h6>
+                    </div>
+                </div>
+            </div>
         </div>
 
-       <div class="col-md-4">
+        <div class="diva1sec2">
+            <h2 class="sec2hh1"><img class="sec2img2" src="./assets/img/text-ellipse.png"> All Products</h2>
 
-         <button type="submit" class="btn btn-block bg-orange text-white rounded-0">Subscribe</button>
+            <div class="sec2div1">
+                <h5 class="tablinks sec2hh2" onclick="openCity(event, 'new')" id="defaultOpen">NEW</h5>
+                <h5 class="tablinks sec2hh3" onclick="openCity(event, 'used')">USED</h5>
+            </div>
 
+            <div id="new" class="tabcontentt">
+                <div class="sec2gridcont">
+                    <div class="sec2div2">
+                        <div class="sec2div5 sec2div6">
+                            <img src="./assets/img/dining.png" alt="">
+                            <h5 class="sec2hh4">Dining Room</h5>
+                        </div>
+                        <div class="sec2div5 sec2div6">
+                            <img src="./assets/img/bedroom.png" alt="">
+                            <h5 class="sec2hh4">Bedroom</h5>
+                        </div>
+                        <div class="sec2div6">
+                            <img src="./assets/img/hallway.png" alt="">
+                            <h5 class="sec2hh4">Hallway</h5>
+                        </div>
+                    </div>
+                    <div class="sec2div3">
+                        <img class="sec2img1" src="./assets/img/main-img.png" alt="">
+                    </div>
+                    <div class="sec2div4">
+                        <div class="sec2div5 sec2div6">
+                            <img src="./assets/img/office.png" alt="">
+                            <h5 class="sec2hh4">Office</h5>
+                        </div>
+                        <div class="sec2div5 sec2div6 sec3active">
+                            <img src="./assets/img/living-room.png" alt="">
+                            <h5 class="sec2hh4 sec3activetext">Living Room</h5>
+                        </div>
+                        <div class="sec2div6">
+                            <img src="./assets/img/kitchen.png" alt="">
+                            <h5 class="sec2hh4">Kitchen</h5>
+                        </div>
+                    </div>
+                </div>
+                <div class="sec2div7">
+                    <div class="sec2div5b sec2div6b">
+                        <img src="./assets/img/office.png" alt="">
+                        <h5 class="sec2hh4">Office</h5>
+                    </div>
+                    <div class="sec2div5b sec2div6b sec3active">
+                        <img src="./assets/img/living-room.png" alt="">
+                        <h5 class="sec2hh4 sec3activetext">Living Room</h5>
+                    </div>
+                    <div class="sec2div6b">
+                        <img src="./assets/img/kitchen.png" alt="">
+                        <h5 class="sec2hh4">Kitchen</h5>
+                    </div>
+                </div>
+            </div>
+            
+            <div id="used" class="tabcontentt">
+                <h1 class="useddiv1">
+                    <span class="useddiv2">Co</span>mi<span class="useddiv2">ng S</span>oon<span class="useddiv2">!</span></h1>
+            </div>
+
+        </div>
+    </div>
+
+
+
+    <!-- Sharon -->
+ <div class="row text-section">
+  <div class="container my-3 py-2">
+   <div class="row">
+     <div class="col-md-7 box">
+       <h2 class="text-white">Join Our Newsletter</h2>
+       <p class="text-white">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet tenetur, nihil facilis fugiat aperiam cum debitis beatae consequatur unde repellat.</p>
+     </div>
+    <div class="col-md-5 box">
+      <form class="mt-4">
+       <div class="row">
+        <div class="col-md-8 p-0">
+          <div class="form-group">
+            <input placeholder="Please enter your email here" type="text" name="subscribe" class="form-control rounded-0">
+          </div>
+        </div>
+       <div class="col-md-4 p-0">
+         <button type="submit" class="btn btn-block bg-orange rounded-0">Subscribe</button>
        </div>
-
        </div>
-
       </form>
-
     </div>
-
    </div>
-
   </div>
-
  </div>
-
 <div class="img-section">
-
  <div class="container-fluid img-container">
-
    <div class="row img-row">
-
     <div class="col-md-4 col-sm-12">
-
      <div class="row img-row-semi">
-
        <div class="col-md-6 col-sm-6">
-
-         <img src="./assets/semi1.png" alt="Pink sofa" class="img-fluid d-block">
-
+         <img src="./assets/img/semi1.png" alt="Pink sofa" class="img-fluid d-block">
        </div>
-
        <div class="col-md-6 col-sm-6">
-
-         <img src="./assets/semi2.png" alt="Red sofa" class="img-fluid d-block">
-
+         <img src="./assets/img/semi2.png" alt="Red sofa" class="img-fluid d-block">
        </div>
-
      </div>
-
      <div class="row">
-
        <div class="col-md-7 col-sm-6">
-
-         <img src="./assets/semi3.png" alt="Red settee" class="img-fluid d-block">
-
+         <img src="./assets/img/semi3.png" alt="Red settee" class="img-fluid d-block">
        </div>
-
        <div class="col-md-5 col-sm-6">
-
-         <img src="./assets/semi4.png" alt="White furniture" class="img-fluid d-block">
-
+         <img src="./assets/img/semi4.png" alt="White furniture" class="img-fluid d-block">
        </div>
-
      </div>
-
     </div>
-
     <div class="col-md-4 col-sm-6">
-
-      <img src="./assets/column2.png" alt="Sidedrawer" class="img-fluid d-block">
-
+      <img src="./assets/img/column2.png" alt="Sidedrawer" class="img-fluid d-block">
     </div>
-
     <div class="col-md-4 col-sm-6">
-
-      <img src="./assets/column3.png" alt="Chairs" class="img-fluid d-block">
-
+      <img src="./assets/img/column3.png" alt="Chairs" class="img-fluid d-block">
     </div>
-
    </div>
-
  </div>
-
 </div>
+
+
+
+
 
     <!-- Acel -->
 
+
+
+
+
+
+
+
+    <!-- Font -->
+<hr style="border: 1px solid lightgray">
+  <div class="container-fluid">
+    <div class="container mt-5 pt-3 pb-4">
+      <div class="row">
+        <!-- Footer one -->
+        <div class="col-xs-6 col-md-3 footer-one footer-list">
+          <h5 class="text-uppercase font-weight-bold mb-4">about us</h5>
+          <ul class="list-group">
+            <li class="list-group-item"><a href="" class="text-muted">Our Company</a></li>
+            <li class="list-group-item"><a href="" class="text-muted">Customer Review</a></li>
+            <li class="list-group-item"><a href="" class="text-muted">Contact Us</a></li>
+            <li class="list-group-item"><a href="" class="text-muted">Site Map</a></li>
+          </ul>
+        </div>
+        <!-- footer two -->
+        <div class="col-xs-6 col-md-3 footer-two footer-list">
+          <h5 class="text-uppercase font-weight-bold mb-4">helps</h5>
+          <ul class="list-group">
+            <li class="list-group-item"><a href="" class="text-muted">Tracking your order</a></li>
+            <li class="list-group-item"><a href="" class="text-muted">Helps & FAQs</a></li>
+            <li class="list-group-item"><a href="" class="text-muted">Deliveries</a></li>
+            <li class="list-group-item"><a href="" class="text-muted">Return & Refunds</a></li>
+            <li class="list-group-item"><a href="" class="text-muted">Buying Guides</a></li>
+          </ul>
+        </div>
+        <!-- footer three -->
+        <div class="col-md-3 footer-three footer-list">
+          <h5 class="text-uppercase font-weight-bold mb-4">4niture services</h5>
+          <ul class="list-group">
+            <li class="list-group-item"><a href="" class="text-muted">Used Furniture</a></li>
+            <li class="list-group-item"><a href="" class="text-muted">New Furniture</a></li>
+            <li class="list-group-item"><a href="" class="text-muted">Profile</a></li>
+          </ul>
+        </div>
+        <!-- footer four -->
+        <div class="col-md-3 footer-four">
+          <div class="col-md-12 footer-logo-holder pl-0">
+            <img src="assets/img/logo-light.svg">
+          </div>
+          <p class="footer-icons">
+            <a href=""><i class="fab fa-instagram"></i></a>
+            <a href=""><i class="fab fa-twitter"></i></a>
+            <a href=""><i class="fab fa-facebook-f fb"></i></a>
+            <a href=""><i class="fab fa-telegram-plane"></i></a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <hr style="border: 1px solid lightgray">
+  <div class="container-fluid mt-4">
+    <div class="col-md-12 copyright">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-7 left-copyright">
+            <p>
+              <a href="" class="text-dark mr-5">Terms & Conditions</a>
+              <a href="" class="text-dark mr-5">Cookies & Private Policy</a>
+              <a href="" class="text-dark">Sitemap</a>
+            </p>
+          </div>
+          <div class="col-md-5">
+            <p>Copyright 2020 4niture. All Rights Reserved</p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+
+
     <!---------------------- CDNs----------------- -->
-
     <!-- jQuery CDN -->
-
     <script
-
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-
       crossorigin="anonymous"
-
     ></script>
-
     <!-- ajax CDN -->
-
     <script
-
       src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-
       integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-
       crossorigin="anonymous"
-
     ></script>
-
     <!-- BootstrapJS CDN -->
-
     <script
-
       src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
-
       integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-
       crossorigin="anonymous"
-
     ></script>
-
     <!-- Custom Javascript Links -->
-
     <script src="./assets/main.js"></script>
 
-</body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.0/gsap.min.js"></script>
+    <script>
+      gsap.from(".box-animation", {
+  duration: 2,
+  scale: 0.5, 
+  opacity: 0, 
+  delay: 0.5, 
+  stagger: 0.2,
+  ease: "elastic", 
+  force3D: true
+});
 
+document.querySelectorAll(".box-animation").forEach(function(box) {
+  box.addEventListener("click", function() {
+    gsap.to(".box", {
+      duration: 0.5, 
+      opacity: 0, 
+      y: -100, 
+      stagger: 0.1,
+      ease: "back.in"
+    });
+  });
+});
+gsap.from("#header", { duration: 2, scale: 0.5, opacity: 0, delay: 1, stagger: 0.2, ease: "elastic", force3D: true});
+    </script>
+  </body>
 </html>
