--- a/About/about.html
+++ b/About/about.html
@@ -24,7 +24,7 @@
     </script>
 
 <!-- Custom Css -->
-    <link rel="stylesheet" href="./assets/style.css">
+    <link rel="stylesheet" href="furniture.css">
     <!-- google font -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
@@ -34,7 +34,7 @@
   <!-- Header-->
   <header>
     <nav class="navbar navbar-expand-md navbar-light"> 
-      <a class="navbar-brand" href="index.html"><img src="./assets/img/logo-light.svg" alt="Logo"></a> 
+      <a class="navbar-brand" href="index.html"><img src="./img/logo-light.svg" alt="Logo"></a> 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation"> 
         <span class="navbar-toggler-icon"></span> 
       </button> 
@@ -62,12 +62,12 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit atque repellendus blanditiis consequuntur unde distinctio eligendi qui tempore accusamus exercitationem.</p>
       </div>
       <div class="col-md-7 col-sm-12">
-        <img src="./assets/img/porch.jpg" alt="Porch" class="img-fluid d-block">
+        <img src="./img/porch.jpg" alt="Porch" class="img-fluid d-block">
       </div>
      </div>
     <div class="row my-3">
       <div class="col-md-7 col-sm-12">
-        <img src="./assets/img/porch-trad.jpg" alt="Porch" class="img-fluid d-block approach">
+        <img src="./img/porch-trad.jpg" alt="Porch" class="img-fluid d-block approach">
       </div>
       <div class="col-md-5 col-sm-12">
         <h2 class="my-3">Our Approach</h2>
@@ -81,7 +81,7 @@
      <h2 class="text-center py-3">What Our Customers Think</h2>
      <div class="row py-4 customer mx-auto">
       <div class="col-md-3">
-         <img src="./assets/img/person-1.jpg" alt="Customer" class="img-fluid">
+         <img src="./img/person-1.jpg" alt="Customer" class="img-fluid">
       </div>
       <div class="col-md-4 d-flex align-items-center">
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos minus dignissimos labore fugiat tenetur voluptatem dolores totam ea molestias nobis.</p>
@@ -90,7 +90,7 @@
      </div>
     <div class="row py-4 customer mx-auto">
       <div class="col-md-3">
-        <img src="./assets/img/person-2.jpg" alt="Customer" class="img-fluid">
+        <img src="./img/person-2.jpg" alt="Customer" class="img-fluid">
       </div>
      <div class="col-md-4 d-flex align-items-center">
        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident natus, aspernatur repellendus mollitia. Ea eius voluptates quaerat error doloribus, laborum nemo perferendis nobis, labore asperiores, corrupti facilis expedita! Quod, velit.</p>
@@ -164,7 +164,7 @@
         <!-- footer four -->
         <div class="col-md-3 footer-four">
           <div class="col-md-12 footer-logo-holder pl-0">
-            <img src="assets/img/logo-light.svg">
+            <img src="./img/logo-light.svg">
           </div>
           <p class="footer-icons">
             <a href=""><i class="fab fa-instagram"></i></a>
