--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </script>
 
 <!-- Custom Css -->
-    <link rel="stylesheet" href="./assets/furniture.css">
+    <link rel="stylesheet" href="./About/furniture.css">
     <!-- google font -->
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">
@@ -252,7 +252,7 @@
         <!-- footer four -->
         <div class="col-md-3 footer-four">
           <div class="col-md-12 footer-logo-holder pl-0">
-            <img src="assets/img/logo-light.svg">
+            <img src="./img/logo-light.svg">
           </div>
           <p class="footer-icons">
             <a href=""><i class="fab fa-instagram"></i></a>
@@ -308,7 +308,7 @@
       crossorigin="anonymous"
     ></script>
     <!-- Custom Javascript Links -->
-    <script src="./assets/main.js"></script>
+    <script src="./assets/furniture.js"></script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.0/gsap.min.js"></script>
     <script>
